# mcp-await

./: .gitignore  .gitlab-ci.yml  .npmignore  CLAUDE.md  Cargo.toml  README.md  demo.tape  dist-workspace.toml  install.js  package.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/tools/: command.rs  docker.rs  file.rs  ghrun.rs  mod.rs  pid.rs  port.rs  url.rs
tests/: cli_tests.rs
