[package]
name = "mcp-watch"
version = "0.2.0"
edition = "2021"
description = "MCP server with blocking and non-blocking wait tools for AI CLI assistants"
license = "MIT"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
