[package]
name = "mcp-await"
version = "0.1.1"
edition = "2021"
description = "Condition watcher MCP server + CLI for AI assistants — block until a port opens, a file changes, a URL responds, a process exits, and more"
license = "MIT"
repository = "https://github.com/ricardo-hdrn/mcp-await"
homepage = "https://github.com/ricardo-hdrn/mcp-await"
documentation = "https://docs.rs/mcp-await"
readme = "README.md"
keywords = ["mcp", "ai", "cli", "watcher", "await"]
categories = ["command-line-utilities", "asynchronous"]

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
